hphp/test/zend/good/tests/lang/foreachLoop.006.php
<?php
$a = array("a","b","c");
foreach ($a as &$k=>$v) {
  var_dump($v);
}
?>